--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,8 +1,18 @@
 spring:
   jpa:
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
   datasource:
-    url: jdbc:mysql://172.17.0.3:3306/star-wars-planets
+    url: jdbc:mysql://172.17.0.2:3306/star-wars-planets
     username: root
     password: docker
+    driver-class-name: com.mysql.jdbc.Driver
+
+
+swapi:
+  url:
+    base: https://swapi.dev/api
+    planets: ${swapi.url.base}/planets
+
+
