definindo prefixo "/api" para todos os controllers

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,6 +14,10 @@ spring:
     username: root
     password: docker
 
+server:
+  servlet:
+    contextPath: /api
+
 swapi:
   url:
     base: https://swapi.dev/api
