--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <hibernate-validator.version>6.1.5.Final</hibernate-validator.version>
     <junit-jupiter-engine.version>5.6.2</junit-jupiter-engine.version>
     <mockito-junit-jupiter.version>3.5.2</mockito-junit-jupiter.version>
+    <rest-assured.version>4.2.0</rest-assured.version>
   </properties>
 
   <dependencies>
@@ -62,21 +63,29 @@
     <dependency>
       <groupId>org.hibernate.validator</groupId>
       <artifactId>hibernate-validator</artifactId>
+      <version>${hibernate-validator.version}</version>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
+      <version>${junit-jupiter-engine.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-junit-jupiter</artifactId>
+      <version>${mockito-junit-jupiter.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.rest-assured</groupId>
+      <artifactId>rest-assured</artifactId>
+      <version>${rest-assured.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
-      <scope>test</scope>
     </dependency>
   </dependencies>
 
