--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springdoc</groupId>
+      <artifactId>springdoc-openapi-ui</artifactId>
+      <version>1.4.3</version>
+    </dependency>
   </dependencies>
 
   <dependencyManagement>
